--- a/config-data/jmq-estudiante-service.yml
+++ b/config-data/jmq-estudiante-service.yml
@@ -12,3 +12,11 @@ spring:
     username: root
     password: ""
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8090/eureka
+  instance:
+    hostname: localhost
