--- a/config-data/jmq-curso-service.yml
+++ b/config-data/jmq-curso-service.yml
@@ -1,17 +1,19 @@
 server:
   port: 8082
 spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/jmq-curso
+    username: postgres
+    password: 123456
+    driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-
-  datasource:
-    url: jdbc:mysql://localhost:3306/jmq-curso
-    username: root
-    password: ""
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 eureka:
   client:
