--- a/config-data/jmq-curso-service.yml
+++ b/config-data/jmq-curso-service.yml
@@ -15,6 +15,14 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /doc/swagger-ui.html
+
+
 eureka:
   client:
     serviceUrl:
