--- a/config-data/jmq-matricula-service.yml
+++ b/config-data/jmq-matricula-service.yml
@@ -13,6 +13,13 @@ spring:
       ddl-auto: update
     show-sql: true
 
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /doc/swagger-ui.html
+
 
 eureka:
   client:
